--- a/index.html
+++ b/index.html
@@ -1,276 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-
-	<!-- Basic -->
-	<meta charset="utf-8">
-	<meta name="keywords" content="HTML5 Template" />
-	<meta name="description" content="Arlin - Responsive HTML5 Wedding Template">
-	<meta name="author" content="regediter.com">
-
-	<!-- Page Title -->
-	<title>Video Background One Page Arlin Wedding Html5</title>
-
-	<!-- Mobile Meta -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<!-- Favicon -->
-	<link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-	<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
-
-	<!-- Vendor CSS -->
-
-	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="vendor/owlcarousel/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="vendor/owlcarousel/css/owl.theme.default.min.css">
-	<link rel="stylesheet" href="vendor/animate_css/animate.css">
-	<link rel="stylesheet" href="vendor/magnific-popup/css/magnific-popup.css">
-	<link rel="stylesheet" href="vendor/vegas/dist/vegas.min.css">
-
-	<!-- Fonts CSS -->
-	<link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-
-	<!-- Theme CSS -->
-	<link rel="stylesheet" href="css/style.css">
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-	<!-- Page Loader Animation -->
-	<div id="loader">
-		<div class="container loader-img-holder text-center">
-			<img class="img-fluid" src="img/cargador.gif" alt="">
-		</div>
-	</div>
-	<!-- Page Loader Animation End-->
-
-	<!-- Video Section -->
-	<section id="video-bg">
-		<div class="holder-caption">
-			<div class="container relative-z">
-				<div class="row">
-					<div class="col col-lg-12 align-self-center">
-						<!-- <h1><span class="custom-color">W</span>edding</h1> -->
-						<div class="slider-text-holder">
-							<!-- <h2>Jane & Joe</h2>
-								<p>25. Jun. 2019</p> -->
-							<div class="slider-img-holder"></div>
-						</div>
-						<!-- <div class="justify-content-lg-center counter">
-								<div id="countdown"></div>
-							</div> -->
-					</div>
-				</div>
-			</div>
-			<!-- <div class="slider-scroll">
-					<a class="scroll-link" href="#about">
-						<i class="fa fa-angle-down fade-down"></i>
-					</a>
-				</div> -->
-		</div>
-
-		<div class="video-holder">
-
-			<div id="video-wrap" class="video-player"
-				data-property="{videoURL:'https://youtu.be/GPmAOhJOZhY',containment:'.video-holder',autoPlay:true, mute:true, startAt:0, opacity:1}">
-			</div>
-
-		</div>
-		<!-- <div class="img-overlay"></div> -->
-	</section>
-	<!-- Video Section End -->
-
-	<!-- Sticky Menu -->
-	<header id="nav-holder">
-		<nav id="primary-navbar-video" class="navbar navbar-expand-lg navbar-dark bg-darker">
-			<div class="container">
-				<a class="navbar-brand" href="#">
-					<img class="img-fluid" src="img/init/logo-blanco.svg" alt="">
-				</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse"
-					data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-					aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mr-auto menu-right">
-						<li class="nav-item">
-							<a class="nav-link shadow_sp" href="#slider">GLENY</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link shadow_sp" href="#about">COLECCIONES</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link shadow_sp" href="#story">ASESORÍAS</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link shadow_sp" href="#blog">CONTACTO</a>
-						</li>
-
-					</ul>
-				</div>
-			</div>
-		</nav>
-	</header>
-
-	<!-- Portfolio Section -->
-	<section id="portfolio" class="pt-5">
-		<div class="container-fluid pr-lg-5 pl-lg-5">
-
-			<!-- Portfolio Images -->
-			<div class="row grid x justify-content-center">
-				<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 party transition"
-					data-category="transition">
-					<div class="item opc" >
-						<a href="img/init/portafolio/FP9.jpg">
-							<div class="thumbnail-overlay">
-								<img class="img-fluid" src="img/init/portafolio/FP9.jpg" alt="">
-								<span class="thumbnail-title">
-									<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
-									<div class="logo_colecction"></div>
-								</span>
-							</div>
-						</a>
-					</div>
-				</div>
-				<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 wedding transition"
-					data-category="transition">
-					<div class="item opc">
-						<a href="img/init/portafolio/JA13.jpg">
-							<div class="thumbnail-overlay">
-								<img class="img-fluid" src="img/init/portafolio/JA13.jpg" alt="">
-								<span class="thumbnail-title">
-									<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
-									<div class="logo_colecction"></div>
-								</span>
-							</div>
-						</a>
-					</div>
-				</div>
-				<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 party transition"
-					data-category="transition">
-					<div class="item opc">
-						<a href="img/init/portafolio/MG10.jpg">
-							<div class="thumbnail-overlay">
-								<img class="img-fluid" src="img/init/portafolio/MG10.jpg" alt="">
-								<span class="thumbnail-title">
-									<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
-									<div class="logo_colecction"></div>
-								</span>
-							</div>
-						</a>
-					</div>
-				</div>
-
-
-			</div>
-			<div class="row grid x">
-				<div class="grid-item popup-gallery col-md-6 col-sm-12 wedding transition" data-category="transition">
-					<div class="item opc">
-						<a href="img/init/portafolio/SP10.jpg">
-							<div class="thumbnail-overlay">
-								<img class="img-fluid" src="img/init/portafolio/SP10.jpg" alt="">
-								<span class="thumbnail-title">
-									<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
-									<div class="logo_colecction"></div>
-								</span>
-							</div>
-						</a>
-					</div>
-				</div>
-				<div class="grid-item popup-gallery col-md-6 col-sm-12 wedding transition" data-category="transition">
-					<div class="item opc">
-						<a href="img/init/portafolio/UKU1.jpg">
-							<div class="thumbnail-overlay">
-								<img class="img-fluid" src="img/init/portafolio/UKU1.jpg" alt="">
-								<span class="thumbnail-title">
-									<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
-									<div class="logo_colecction"></div>
-								</span>
-							</div>
-						</a>
-					</div>
-				</div>
-
-			</div>
-
-		</div>
-	</section>
-	<section id="barra_logo" class="p-0">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<img class="headline-hearth pt-4 pb-4 esp_logo" src="img/init/logo_negro.svg" alt="">
-
-				</div>
-			</div>
-		</div>
-	</section>
-
-
-
-	<!-- Footer Bottom -->
-	<div id="footer-bottom">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-lg-4 justify-content-center">
-					<p class="text-center"><i class="fa fa-map-marker" aria-hidden="true"></i> Segovia 108 departamento 302</p>
-					<p class="text-center">Santiago de Surco Lima- Perú</p>
-				</div>
-				<div class="col-lg-4 justify-content-center">
-					<a href="tel:51-997 892 462">
-						<p class="text-center"><i class="fa fa-phone"></i> +(51)997 892 462</p>
-					</a>
-					<p class="text-center">Todos los derechos reservados &copy; GlenyCastro</p>
-				</div>
-				<div class="col-lg-4 justify-content-center">
-					<p class="text-center">
-						<a href="https://www.facebook.com/GlenyCastroGC" target="blank"><i
-								class="fa fa-facebook p-2 colIcon"></i></a>
-						<a href="https://twitter.com/GlenyCastroGC" target="blank"><i
-								class="fa fa-twitter p-2 colIcon"></i></a>
-						<a href="https://www.instagram.com/glenycastrogc/" target="blank"><i
-								class="fa fa-instagram p-2 colIcon"></i>
-					</p></a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Footer Bottom End -->
-
-	<!-- Scroll Up -->
-	<div class="scrollup">
-		<i class="fa fa-angle-up" aria-hidden="true"></i>
-	</div>
-	<!-- Scroll Up End -->
-
-	<!-- Frameworks -->
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-	<!-- Plugins -->
-	<script src="vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-	<script src="vendor/vegas/dist/vegas.min.js"></script>
-	<script src="vendor/jquery-validation/js/jquery.validate.min.js"></script>
-	<script src="vendor/waypoint/js/jquery.waypoints.min.js"></script>
-	<script src="vendor/isotope/js/isotope.pkgd.min.js"></script>
-	<script src="vendor/magnific-popup/js/jquery.magnific-popup.min.js"></script>
-	<script src="vendor/owlcarousel/js/owl.carousel.min.js"></script>
-	<script src="vendor/countup/js/countUp.min.js"></script>
-	<script src="vendor/jquery.scrollTo/jquery.scrollTo.min.js"></script>
-
-	<!-- Video Player -->
-	<script src="vendor/jquery.mb.YTPlayer/jquery.mb.YTPlayer.min.js"></script>
-
-	<!-- Theme Sett -->
-	<script src="js/main.js"></script>
-
-
-
+    <h3>Hola mundo</h3>
 </body>
-
 </html>
