--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="author" content="regediter.com">
 
 	<!-- Page Title -->
-	<title>Video Background One Page Arlin Wedding Html5</title>
+	<title>Gleny Castro</title>
 
 	<!-- Mobile Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -88,7 +88,7 @@
 	<header id="nav-holder">
 		<nav id="primary-navbar-video" class="navbar navbar-expand-lg navbar-dark bg-darker">
 			<div class="container">
-				<a class="navbar-brand" href="#">
+				<a class="navbar-brand" href="index.html">
 					<img class="img-fluid" src="img/init/logo-blanco.svg" alt="">
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -99,16 +99,16 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav mr-auto menu-right">
 						<li class="nav-item">
-							<a class="nav-link shadow_sp" href="#slider">GLENY</a>
+							<a class="nav-link shadow_sp" href="gleny.html">GLENY</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link shadow_sp" href="#about">COLECCIONES</a>
+							<a class="nav-link shadow_sp" href="colecciones.html">COLECCIONES</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link shadow_sp" href="#story">ASESORÍAS</a>
+							<a class="nav-link shadow_sp" href="asesoria.html">ASESORÍAS</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link shadow_sp" href="#blog">CONTACTO</a>
+							<a class="nav-link shadow_sp" href="contacto.html">CONTACTO</a>
 						</li>
 
 					</ul>
@@ -168,31 +168,36 @@
 
 
 			</div>
-			<div class="row grid x">
-				<div class="grid-item popup-gallery col-md-6 col-sm-12 wedding transition" data-category="transition">
-					<div class="item opc">
-						<a href="img/init/portafolio/SP10.jpg">
-							<div class="thumbnail-overlay">
-								<img class="img-fluid" src="img/init/portafolio/SP10.jpg" alt="">
-								<span class="thumbnail-title">
-									<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
-									<div class="logo_colecction"></div>
-								</span>
+			<div class="row">
+				<div class="col-12 col-md-10 m-auto text-center">
+					<div class="row grid x">
+
+						<div class="grid-item popup-gallery col-md-6 col-sm-12 wedding transition" data-category="transition">
+							<div class="item opc">
+								<a href="img/init/portafolio/SP10.jpg">
+									<div class="thumbnail-overlay">
+										<img class="img-fluid" src="img/init/portafolio/SP10.jpg" alt="">
+										<span class="thumbnail-title">
+											<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+											<div class="logo_colecction"></div>
+										</span>
+									</div>
+								</a>
 							</div>
-						</a>
-					</div>
-				</div>
-				<div class="grid-item popup-gallery col-md-6 col-sm-12 wedding transition" data-category="transition">
-					<div class="item opc">
-						<a href="img/init/portafolio/UKU1.jpg">
-							<div class="thumbnail-overlay">
-								<img class="img-fluid" src="img/init/portafolio/UKU1.jpg" alt="">
-								<span class="thumbnail-title">
-									<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
-									<div class="logo_colecction"></div>
-								</span>
+						</div>
+						<div class="grid-item popup-gallery col-md-6 col-sm-12 wedding transition" data-category="transition">
+							<div class="item opc">
+								<a href="img/init/portafolio/UKU1.jpg">
+									<div class="thumbnail-overlay">
+										<img class="img-fluid" src="img/init/portafolio/UKU1.jpg" alt="">
+										<span class="thumbnail-title">
+											<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+											<div class="logo_colecction"></div>
+										</span>
+									</div>
+								</a>
 							</div>
-						</a>
+						</div>
 					</div>
 				</div>
 
