--- a/gleny.html
+++ b/gleny.html
@@ -9,7 +9,7 @@
 		<meta name="author" content="regediter.com">
 			
 		<!-- Page Title -->
-		<title>One Page Arlin Wedding Html5 Animate</title>
+		<title>Gleny Castro</title>
 
 		<!-- Mobile Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -96,7 +96,7 @@
 
 
 		<!-- Story Section -->
-		<section id="story_" class="pt-4 pb-4">
+		<section id="story_" class="mt-4 pt-0 pb-4 barrGradient">
 			<div class="container">
 				
 					<div class="row">
@@ -112,7 +112,7 @@
 								data-aos="fade-left"
      							data-aos-offset="350"
      							data-aos-easing="ease-in-out-cubic">
-							<h3 class="tline-title font-weight-light text-uppercase text-center align-middle pb-5">La Dama de la Alpaca</h3>
+							<h3 class="tline-title font-weight-light text-uppercase text-center align-middle pb-5 pt-5 pt-md-0">La Dama de la Alpaca</h3>
 							<p class="text-center esp_linHeight">Así reconocida por la prensa nacional e internacional,
 								desde muy pequeña mostró su pasión por las telas, sus texturas y la moda;
 								presentándose al concurso “Jóvenes Creadores al Mundo” en Lima
