--- a/colecciones.html
+++ b/colecciones.html
@@ -84,8 +84,8 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-lg-12 text-center">
-						<h3 class="mt-5 mb-5">
-                            CONTACTO
+						<h3 class="mt-5 mb-5" style="font-weight: 300;">
+                            COLECCIONES
                         </h3>	
 					</div>
 				</div>
@@ -93,7 +93,100 @@
 		</section>
 
 
+		<section id="portfolio" class="pt-4 noBackground">
+			<div class="container-fluid pr-lg-5 pl-lg-5">
 	
+				<div class="row grid x justify-content-center">
+					<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 party transition mt-0"
+						data-category="transition">
+						<div class="item opc" >
+							<a href="img/init/portafolio/FP9.jpg">
+								<div class="thumbnail-overlay">
+									<img class="img-fluid" src="img/init/portafolio/FP9.jpg" alt="">
+									<span class="thumbnail-title">
+										<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+										<div class="logo_colecction"></div>
+									</span>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 wedding transition mt-per-2"
+						data-category="transition">
+						<div class="item opc">
+							<a href="img/init/portafolio/JA13.jpg">
+								<div class="thumbnail-overlay">
+									<img class="img-fluid" src="img/init/portafolio/JA13.jpg" alt="">
+									<span class="thumbnail-title">
+										<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+										<div class="logo_colecction"></div>
+									</span>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 party transition mt-per-4"
+						data-category="transition">
+						<div class="item opc">
+							<a href="img/init/portafolio/MG10.jpg">
+								<div class="thumbnail-overlay">
+									<img class="img-fluid" src="img/init/portafolio/MG10.jpg" alt="">
+									<span class="thumbnail-title">
+										<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+										<div class="logo_colecction"></div>
+									</span>
+								</div>
+							</a>
+						</div>
+					</div>
+
+					<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 party transition"
+						data-category="transition">
+						<div class="item opc" >
+							<a href="img/init/portafolio/FP9.jpg">
+								<div class="thumbnail-overlay">
+									<img class="img-fluid" src="img/init/portafolio/FP9.jpg" alt="">
+									<span class="thumbnail-title">
+										<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+										<div class="logo_colecction"></div>
+									</span>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 wedding transition"
+						data-category="transition">
+						<div class="item opc">
+							<a href="img/init/portafolio/JA13.jpg">
+								<div class="thumbnail-overlay">
+									<img class="img-fluid" src="img/init/portafolio/JA13.jpg" alt="">
+									<span class="thumbnail-title">
+										<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+										<div class="logo_colecction"></div>
+									</span>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 party transition"
+						data-category="transition">
+						<div class="item opc">
+							<a href="img/init/portafolio/MG10.jpg">
+								<div class="thumbnail-overlay">
+									<img class="img-fluid" src="img/init/portafolio/MG10.jpg" alt="">
+									<span class="thumbnail-title">
+										<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+										<div class="logo_colecction"></div>
+									</span>
+								</div>
+							</a>
+						</div>
+					</div>
+					
+				</div>
+	
+			</div>
+		</section>
         
 
 
@@ -164,7 +257,17 @@
 		<script src="vendor/aos/dist/aos.js"></script>
 		<script src="js/main.js"></script>
 
+<script>
 
+var $grid = $('.grid').isotope({
+				itemSelector: '.grid-item',
+				percentPosition: false,
+				masonry: {
+			    // use outer width of grid-sizer for columnWidth
+			    columnWidth: '.grid-item'
+			}
+		});
+</script>
 
 	</body>
 
