--- a/colecciones.html
+++ b/colecciones.html
@@ -97,10 +97,10 @@
 			<div class="container-fluid pr-lg-5 pl-lg-5">
 	
 				<div class="row grid x justify-content-center">
-					<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 party transition mt-0"
+					<div class="grid-item popup-gallery1 col-lg-4 col-md-4 col-sm-12 party transition mt-0"
 						data-category="transition">
 						<div class="item opc" >
-							<a href="img/init/portafolio/FP9.jpg">
+							<a href="./jasmin.html">
 								<div class="thumbnail-overlay">
 									<img class="img-fluid" src="img/init/portafolio/FP9.jpg" alt="">
 									<span class="thumbnail-title">
@@ -111,10 +111,10 @@
 							</a>
 						</div>
 					</div>
-					<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 wedding transition mt-per-2"
+					<div class="grid-item popup-gallery1 col-lg-4 col-md-4 col-sm-12 wedding transition mt-per-2"
 						data-category="transition">
 						<div class="item opc">
-							<a href="img/init/portafolio/JA13.jpg">
+							<a href="./jasmin.html">
 								<div class="thumbnail-overlay">
 									<img class="img-fluid" src="img/init/portafolio/JA13.jpg" alt="">
 									<span class="thumbnail-title">
@@ -125,10 +125,10 @@
 							</a>
 						</div>
 					</div>
-					<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 party transition mt-per-4"
+					<div class="grid-item popup-gallery1 col-lg-4 col-md-4 col-sm-12 party transition mt-per-4"
 						data-category="transition">
 						<div class="item opc">
-							<a href="img/init/portafolio/MG10.jpg">
+							<a href="./jasmin.html">
 								<div class="thumbnail-overlay">
 									<img class="img-fluid" src="img/init/portafolio/MG10.jpg" alt="">
 									<span class="thumbnail-title">
@@ -140,10 +140,10 @@
 						</div>
 					</div>
 
-					<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 party transition"
+					<div class="grid-item popup-gallery1 col-lg-4 col-md-4 col-sm-12 party transition"
 						data-category="transition">
 						<div class="item opc" >
-							<a href="img/init/portafolio/FP9.jpg">
+							<a href="./jasmin.html">
 								<div class="thumbnail-overlay">
 									<img class="img-fluid" src="img/init/portafolio/FP9.jpg" alt="">
 									<span class="thumbnail-title">
@@ -154,10 +154,10 @@
 							</a>
 						</div>
 					</div>
-					<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 wedding transition"
+					<div class="grid-item popup-gallery1 col-lg-4 col-md-4 col-sm-12 wedding transition"
 						data-category="transition">
 						<div class="item opc">
-							<a href="img/init/portafolio/JA13.jpg">
+							<a href="./jasmin.html">
 								<div class="thumbnail-overlay">
 									<img class="img-fluid" src="img/init/portafolio/JA13.jpg" alt="">
 									<span class="thumbnail-title">
@@ -168,10 +168,10 @@
 							</a>
 						</div>
 					</div>
-					<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 party transition"
+					<div class="grid-item popup-gallery1 col-lg-4 col-md-4 col-sm-12 party transition"
 						data-category="transition">
 						<div class="item opc">
-							<a href="img/init/portafolio/MG10.jpg">
+							<a href="./jasmin.html">
 								<div class="thumbnail-overlay">
 									<img class="img-fluid" src="img/init/portafolio/MG10.jpg" alt="">
 									<span class="thumbnail-title">
@@ -257,17 +257,7 @@
 		<script src="vendor/aos/dist/aos.js"></script>
 		<script src="js/main.js"></script>
 
-<script>
 
-var $grid = $('.grid').isotope({
-				itemSelector: '.grid-item',
-				percentPosition: false,
-				masonry: {
-			    // use outer width of grid-sizer for columnWidth
-			    columnWidth: '.grid-item'
-			}
-		});
-</script>
 
 	</body>
 
