--- a/asesoria.html
+++ b/asesoria.html
@@ -85,7 +85,7 @@
 				<div class="row">
 					<div class="col-lg-12 text-center">
 						<h3 class="mt-5 mb-5">
-                            CONTACTO
+                            ASESORÍAS
                         </h3>	
 					</div>
 				</div>
