--- a/contacto.html
+++ b/contacto.html
@@ -1,166 +1,170 @@
 <!doctype html>
 <html lang="es">
+
 <head>
 
-		<!-- Basic -->
-		<meta charset="utf-8">
-		<meta name="keywords" content="HTML5 Template" />
-		<meta name="description" content="Arlin - Responsive HTML5 Wedding Template">
-		<meta name="author" content="regediter.com">
+	<!-- Basic -->
+	<meta charset="utf-8">
+	<meta name="keywords" content="HTML5 Template" />
+	<meta name="description" content="Arlin - Responsive HTML5 Wedding Template">
+	<meta name="author" content="regediter.com">
+
+	<!-- Page Title -->
+	<title>Gleny Castro</title>
+
+	<!-- Mobile Meta -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<!-- Favicon -->
+	<link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+	<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+
+	<!-- Vendor CSS -->
+	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="vendor/owlcarousel/css/owl.carousel.min.css">
+	<link rel="stylesheet" href="vendor/owlcarousel/css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="vendor/animate_css/animate.css">
+	<link rel="stylesheet" href="vendor/magnific-popup/css/magnific-popup.css">
+	<link rel="stylesheet" href="vendor/vegas/dist/vegas.min.css">
+	<link rel="stylesheet" href="vendor/aos/dist/aos.css">
+
+
+	<!-- Fonts CSS -->
+	<link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+
+	<!-- Theme CSS -->
+	<link rel="stylesheet" href="css/style.css">
+	<script src="https://smtpjs.com/v3/smtp.js"></script>
+
+</head>
+
+<body>
+	<!-- Page Loader Animation -->
+	<div id="loader">
+		<div class="container loader-img-holder text-center">
+			<img class="img-fluid" src="img/cargador.gif" alt="">
+		</div>
+	</div>
+	<!-- Page Loader Animation End-->
+
+
+	<!-- Sticky Menu -->
+	<header id="nav-holder">
+		<nav id="primary-navbarOwn" class="navbar navbar-expand-lg navbar-light bg-white">
+			<div class="container">
+				<a class="navbar-brand" href="index.html">
+					<img class="img-fluid" src="img/init/logo_negro.svg" alt="">
+				</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse"
+					data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mr-auto menu-right">
+						<li class="nav-item">
+							<a class="nav-link" href="gleny.html">GLENY</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="colecciones.html">COLECCIONES</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="asesoria.html">ASESORÍAS</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contacto.html">CONTACTO</a>
+						</li>
+
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+	<!-- Sticky Menu End -->
+
+	<section id="barra_logo" class="p-0">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h3 class="mt-5 mb-5">
+						CONTACTO
+					</h3>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- Story Section -->
+	<section id="contacto" class="">
+		<div class="blur"></div>
+
+		<div class="row">
 			
-		<!-- Page Title -->
-		<title>Gleny Castro</title>
-
-		<!-- Mobile Meta -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-		<!-- Favicon -->
-		<link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-		<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
-
-		<!-- Vendor CSS -->
-		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="vendor/owlcarousel/css/owl.carousel.min.css">
-		<link rel="stylesheet" href="vendor/owlcarousel/css/owl.theme.default.min.css">
-		<link rel="stylesheet" href="vendor/animate_css/animate.css">
-		<link rel="stylesheet" href="vendor/magnific-popup/css/magnific-popup.css">
-		<link rel="stylesheet" href="vendor/vegas/dist/vegas.min.css">
-		<link rel="stylesheet" href="vendor/aos/dist/aos.css">
-		
-
-		<!-- Fonts CSS -->
-		<link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
-		<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-
-		<!-- Theme CSS -->
-		<link rel="stylesheet" href="css/style.css">
-		<script src="https://smtpjs.com/v3/smtp.js"></script>
-
-	</head>
-	<body>
-		<!-- Page Loader Animation -->
-		<div id="loader">
-			<div class="container loader-img-holder text-center">
-				<img class="img-fluid" src="img/cargador.gif" alt="">
+			<div class="form-error col-md-12 text-center">
+				<h2 class=" section-heading mt-0 mb-04"><span class="custom-color">O</span>oops!</h2>
+				<p>Something wrong. Please refresh your browser and try again!</p>
 			</div>
-		</div>		
-		<!-- Page Loader Animation End-->
-
-
-		<!-- Sticky Menu -->
-		<header id="nav-holder">
-			<nav id="primary-navbarOwn" class="navbar navbar-expand-lg navbar-light bg-white">
-				<div class="container">
-					<a class="navbar-brand" href="index.html">
-						<img class="img-fluid" src="img/init/logo_negro.svg" alt="">
-					</a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="navbar-nav mr-auto menu-right">
-							<li class="nav-item">
-								<a class="nav-link" href="gleny.html">GLENY</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="colecciones.html">COLECCIONES</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="asesoria.html">ASESORÍAS</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="contacto.html">CONTACTO</a>
-							</li>
-	
-						</ul>
+		</div>
+		<div class="col-md-10 offset-md-1 text-left BGCOnta p-4">
+			<form id="rsvp_form" method="POST" action="">
+				<div class="row pl-0 pr-0 pl-md-4 pr-md-4">
+					<div class="form-group col-md-6">
+						<label for="nombres">Nombre</label>
+						<input id="nombres" type="text" class="form-control" name="nombres" required />
+					</div>
+					<div class="form-group col-md-6">
+						<label for="apellidos">Apellidos</label>
+						<input id="apellidos" type="text" class="form-control" name="apellidos" required />
 					</div>
 				</div>
-			</nav>
-		</header>
-		<!-- Sticky Menu End -->
-
-		<section id="barra_logo" class="p-0">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-lg-12 text-center">
-						<h3 class="mt-5 mb-5">
-                            CONTACTO
-                        </h3>	
+				<div class="row pl-0 pr-0 pl-md-4 pr-md-4">
+					<div class="form-group col-md-6">
+						<label for="email">Correo electrónico</label>
+						<input id="email" type="email" class="form-control" name="email" required />
+					</div>
+					<div class="form-group col-md-6">
+						<label for="telefono">Teléfono</label>
+						<input id="telefono" type="number" class="form-control" name="telefono" required />
 					</div>
 				</div>
-			</div>
-		</section>
 
-
-		<!-- Story Section -->
-		<section id="contacto" class="">
-            <div class="blur"></div>
-        
-            <div class="row">
-                <div class="form-success col-md-12 text-center">
-                    <h2 class=" section-heading mt-0 mb-04"><span class="custom-color">Thank</span> You!</h2>
-                </div>
-                <div class="form-error col-md-12 text-center">
-                    <h2 class=" section-heading mt-0 mb-04"><span class="custom-color">O</span>oops!</h2>
-                    <p>Something wrong. Please refresh your browser and try again!</p>
-                </div>
-            </div>
-            <div class="col-md-10 offset-md-1 text-left BGCOnta p-4">
-                <form id="rsvp_form" method="POST" action="">
-                    <div class="row pl-0 pr-0 pl-md-4 pr-md-4">
-                        <div class="form-group col-md-6">
-                            <label for="name">Nombre</label>
-                            <input type="text" class="form-control" id="name" name="name" required />
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="apellido">Apellidos</label>
-                            <input type="text" class="form-control" id="apellido" name="apellido" required />
-                        </div>
-                    </div>
-                    <div class="row pl-0 pr-0 pl-md-4 pr-md-4">
-                        <div class="form-group col-md-6">
-                            <label for="name">Correo electrónico</label>
-                            <input type="email" class="form-control" id="name" name="name" required />
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="telefono">Teléfono</label>
-                            <input type="number" class="form-control" id="telefono" name="telefono" required />
-                        </div>
-                    </div>
-            
-                    <div class="row pl-0 pr-0 pl-md-4 pr-md-4">
-                        <div class="form-group col-md-12 margin-b-2">
-                            <label for="message">Mensaje</label>
-                            <textarea class="form-control" id="message" rows="5" name="message"></textarea>
-                        </div>
-                    </div>
-                    <div class="row pl-0 pr-0 pl-md-4 pr-md-4">
-                        <div class="form-group col-md-12 text-right">
-							<input type="button" value="Send Email">
-                            <button type="button" onclick="sendEmail()" class="button-medium btn btn-default ct-btn pl-4 pr-4">ENVIAR
-                                <img class="loader" src="img/Loader_to_form_white.gif" alt=""/>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-			<!-- <div class="img-overlay"></div> -->
-
-		</section>
-		<!-- Story Section  End -->
-
-		<section id="barra_logo" class="p-0">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-lg-12 text-center">
-						<img class="headline-hearth pt-4 pb-4 esp_logo" src="img/init/logo_negro.svg" alt="">
-	
+				<div class="row pl-0 pr-0 pl-md-4 pr-md-4">
+					<div class="form-group col-md-12 margin-b-2">
+						<label for="mensaje">Mensaje</label>
+						<textarea id="mensaje" class="form-control" rows="5" name="message" required></textarea>
 					</div>
 				</div>
+				<div class="row pl-0 pr-0 pl-md-4 pr-md-4">
+					<div class="form-group col-md-12 text-right">
+						<button type="submit" class="button-medium btn btn-default ct-btn pl-4 pr-4">ENVIAR
+							<img class="loader" src="img/Loader_to_form_white.gif" alt="" />
+						</button>
+					</div>
+				</div>
+			</form>
+			<div class="form-success col-md-12 text-center">
+				<h5 class="section-heading mt-0 mb-04">¡Muchas gracias!<br>Tu mensaje fue enviado con exito</h5>
 			</div>
-		</section>
+		</div>
+		<!-- <div class="img-overlay"></div> -->
+
+	</section>
+	<!-- Story Section  End -->
+
+	<section id="barra_logo" class="p-0">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<img class="headline-hearth pt-4 pb-4 esp_logo" src="img/init/logo_negro.svg" alt="">
+
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 	<!-- Footer Bottom -->
@@ -168,7 +172,8 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-4 justify-content-center">
-					<p class="text-center"><i class="fa fa-map-marker" aria-hidden="true"></i> Segovia 108 departamento 302</p>
+					<p class="text-center"><i class="fa fa-map-marker" aria-hidden="true"></i> Segovia 108 departamento
+						302</p>
 					<p class="text-center">Santiago de Surco Lima- Perú</p>
 				</div>
 				<div class="col-lg-4 justify-content-center">
@@ -192,47 +197,120 @@
 	</div>
 	<!-- Footer Bottom End -->
 
-		
-		<!-- Scroll Up -->
-		<div class="scrollup">
-			<i class="fa fa-angle-up" aria-hidden="true"></i>
-		</div>
-		<!-- Scroll Up End -->
 
-		<!-- Frameworks -->
-		<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-		
-		<!-- Plugins -->
-		<script src="vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-		<script src="vendor/vegas/dist/vegas.min.js"></script>
-		<script src="vendor/jquery-validation/js/jquery.validate.min.js"></script>
-		<script src="vendor/waypoint/js/jquery.waypoints.min.js"></script>
-		<script src="vendor/isotope/js/isotope.pkgd.min.js"></script>
-		<script src="vendor/magnific-popup/js/jquery.magnific-popup.min.js"></script>
-		<script src="vendor/owlcarousel/js/owl.carousel.min.js"></script>
-		<script src="vendor/countup/js/countUp.min.js"></script>
-		<script src="vendor/jquery.scrollTo/jquery.scrollTo.min.js"></script>
-		<script src="vendor/aos/dist/aos.js"></script>
-		<script src="js/main.js"></script>
+	<!-- Scroll Up -->
+	<div class="scrollup">
+		<i class="fa fa-angle-up" aria-hidden="true"></i>
+	</div>
+	<!-- Scroll Up End -->
+
+	<!-- Frameworks -->
+	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+	<!-- Plugins -->
+	<script src="vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+	<script src="vendor/vegas/dist/vegas.min.js"></script>
+	<script src="vendor/jquery-validation/js/jquery.validate.min.js"></script>
+	<script src="vendor/waypoint/js/jquery.waypoints.min.js"></script>
+	<script src="vendor/isotope/js/isotope.pkgd.min.js"></script>
+	<script src="vendor/magnific-popup/js/jquery.magnific-popup.min.js"></script>
+	<script src="vendor/owlcarousel/js/owl.carousel.min.js"></script>
+	<script src="vendor/countup/js/countUp.min.js"></script>
+	<script src="vendor/jquery.scrollTo/jquery.scrollTo.min.js"></script>
+	<script src="vendor/aos/dist/aos.js"></script>
+	<script src="js/main.js"></script>
 
 
-		<script type="text/javascript">
-			function sendEmail() {
+	<script type="text/javascript">
+		// function sendEmail() {
+
+
+
+		$("#rsvp_form").validate({
+			rules: {
+				nombres: {
+					required: true,
+					minlength: 4
+				},
+				apellidos: {
+					required: true,
+					minlength: 4
+				},
+				email: "required",
+				telefono: {
+					required: true
+				},
+				mensaje: {
+					required: true,
+					maxlength: 300
+				}
+			},
+			messages: {
+				nombres: {
+					required: "Porfavor ingresa tu nombre",
+					minlength: jQuery.validator.format("At least {0} characters required!")
+				},
+				apellidos: {
+					required: "Porfavor ingresa tus apellidos",
+					minlength: jQuery.validator.format("At least {0} characters required!")
+				},
+				email: "Porfavor ingresa tu Email",
+				telefono: "Porfavor ingresa tu numero telefónico",
+				mensaje: {
+					required: "Porfavor ingresar un mensaje",
+					maxlength: jQuery.validator.format("Porfavor ingresar el mensaje no menos de {0} caracteres!")
+				},
+			},
+			submitHandler: function (form) {
+
+				var nombre = document.getElementById("nombres").value;
+				var apellidos = document.getElementById("apellidos").value;
+				var email = document.getElementById("email").value;
+				var telefono = document.getElementById("telefono").value;
+				var mensaje = document.getElementById("mensaje").value;
+				$(".form-success").hide()
+				$(".loader").show();
 				Email.send({
-					Host : "smtp.gmail.com",
-					Username : "glenycstr@gmail.com",
-					Password : "gleny007",
-					To : 'igastelu@factoriamedia.com',
-					From : "glenycstr@gmail.com",
-					Subject : "This is the subject",
-					Body : "And this is the body"
+					Host: "smtp.gmail.com",
+					Username: "glenycstr@gmail.com",
+					Password: "gleny007",
+					To: 'igastelu@factoriamedia.com',
+					From: "glenycstr@gmail.com",
+					Subject: "Correo Electronico enviado desde la Web - GlenyCastro.com",
+					Body: `Nombres: ${nombre} <br> 
+							Apellidos: ${apellidos} <br>
+							Correo Electrónico: ${email} <br>
+							Número telefonico: ${telefono} <br>
+							Mensaje: ${mensaje}`,
+					// Attachments : [
+					// {
+					// 	name : "smtpjs.png",
+					// 	path : "https://networkprogramming.files.wordpress.com/2017/11/smtpjs.png"
+					// }]
 				}).then(
-				message => alert(message)
-				); 
-			}
-		</script>
+					message => enviado(message)
+				);
 
-	</body>
+				return false;
+			}
+		});
+
+		function enviado(message) {
+			console.log(message);
+			document.getElementById("rsvp_form").reset();
+			$(".loader").hide()
+			$(".form-success").show();
+			setTimeout(() => {
+				$(".form-success").hide();				
+			}, 5000);
+		}
+
+			// }
+
+
+	</script>
+
+</body>
 
 </html>
