--- a/contacto.html
+++ b/contacto.html
@@ -273,7 +273,7 @@
 				$(".loader").show();
 				Email.send({					
 					SecureToken : "907eab58-783a-4119-9b88-7c8b4f9b93d9",
-					To: 'igastelu@factoriamedia.com',
+					To: ['igastelu@factoriamedia.com', 'jesusoswaldo11@hotmail.com'],
 					From: "glenycstr@gmail.com",
 					Subject: "Correo Electronico enviado desde la Web - GlenyCastro.com",
 					Body: `Nombres: ${nombre} <br> 
