--- a/colecciones.html
+++ b/colecciones.html
@@ -100,11 +100,11 @@
 					<div class="grid-item popup-gallery1 col-lg-4 col-md-4 col-sm-12 party transition mt-0"
 						data-category="transition">
 						<div class="item opc" >
-							<a href="./jasmin.html">
+							<a href="./aflordepiel.html">
 								<div class="thumbnail-overlay">
-									<img class="img-fluid" src="img/init/portafolio/FP9.jpg" alt="">
+									<img class="img-fluid" src="./img/coleccion/flordepiel.jpg" alt="">
 									<span class="thumbnail-title">
-										<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+										<h3 class="text-uppercase peso-200 text-white shadow_sp">A FLOR DE PIEL</h3>
 										<div class="logo_colecction"></div>
 									</span>
 								</div>
@@ -114,11 +114,11 @@
 					<div class="grid-item popup-gallery1 col-lg-4 col-md-4 col-sm-12 wedding transition mt-per-2"
 						data-category="transition">
 						<div class="item opc">
-							<a href="./jasmin.html">
+							<a href="./sanpedro.html">
 								<div class="thumbnail-overlay">
-									<img class="img-fluid" src="img/init/portafolio/JA13.jpg" alt="">
+									<img class="img-fluid" src="img/coleccion/sanpedro.jpg" alt="">
 									<span class="thumbnail-title">
-										<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+										<h3 class="text-uppercase peso-200 text-white shadow_sp">SAN PEDRO NEOCLÁSICO</h3>
 										<div class="logo_colecction"></div>
 									</span>
 								</div>
@@ -128,11 +128,11 @@
 					<div class="grid-item popup-gallery1 col-lg-4 col-md-4 col-sm-12 party transition mt-per-4"
 						data-category="transition">
 						<div class="item opc">
-							<a href="./jasmin.html">
+							<a href="./magma.html">
 								<div class="thumbnail-overlay">
-									<img class="img-fluid" src="img/init/portafolio/MG10.jpg" alt="">
+									<img class="img-fluid" src="img/coleccion/magma.jpg" alt="">
 									<span class="thumbnail-title">
-										<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+										<h3 class="text-uppercase peso-200 text-white shadow_sp">MAGMA</h3>
 										<div class="logo_colecction"></div>
 									</span>
 								</div>
@@ -143,11 +143,11 @@
 					<div class="grid-item popup-gallery1 col-lg-4 col-md-4 col-sm-12 party transition"
 						data-category="transition">
 						<div class="item opc" >
-							<a href="./jasmin.html">
+							<a href="./ukukus.html">
 								<div class="thumbnail-overlay">
-									<img class="img-fluid" src="img/init/portafolio/FP9.jpg" alt="">
+									<img class="img-fluid" src="img/coleccion/ukukus.jpg" alt="">
 									<span class="thumbnail-title">
-										<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+										<h3 class="text-uppercase peso-200 text-white shadow_sp">UKUKUS</h3>
 										<div class="logo_colecction"></div>
 									</span>
 								</div>
@@ -159,7 +159,7 @@
 						<div class="item opc">
 							<a href="./jasmin.html">
 								<div class="thumbnail-overlay">
-									<img class="img-fluid" src="img/init/portafolio/JA13.jpg" alt="">
+									<img class="img-fluid" src="img/coleccion/jasmin.jpg" alt="">
 									<span class="thumbnail-title">
 										<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
 										<div class="logo_colecction"></div>
@@ -171,11 +171,11 @@
 					<div class="grid-item popup-gallery1 col-lg-4 col-md-4 col-sm-12 party transition"
 						data-category="transition">
 						<div class="item opc">
-							<a href="./jasmin.html">
+							<a href="./general.html">
 								<div class="thumbnail-overlay">
-									<img class="img-fluid" src="img/init/portafolio/MG10.jpg" alt="">
+									<img class="img-fluid" src="img/coleccion/otros.jpg" alt="">
 									<span class="thumbnail-title">
-										<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+										<h3 class="text-uppercase peso-200 text-white shadow_sp">GALERIA</h3>
 										<div class="logo_colecction"></div>
 									</span>
 								</div>
