--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 							<div class="thumbnail-overlay">
 								<img class="img-fluid" src="img/init/portafolio/FP9.jpg" alt="">
 								<span class="thumbnail-title">
-									<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+									<h3 class="text-uppercase peso-200 text-white shadow_sp">A FLOR DE PIEL</h3>
 									<div class="logo_colecction"></div>
 								</span>
 							</div>
@@ -158,7 +158,7 @@
 							<div class="thumbnail-overlay">
 								<img class="img-fluid" src="img/init/portafolio/MG10.jpg" alt="">
 								<span class="thumbnail-title">
-									<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+									<h3 class="text-uppercase peso-200 text-white shadow_sp">MAGMA</h3>
 									<div class="logo_colecction"></div>
 								</span>
 							</div>
@@ -178,7 +178,7 @@
 									<div class="thumbnail-overlay">
 										<img class="img-fluid" src="img/init/portafolio/SP10.jpg" alt="">
 										<span class="thumbnail-title">
-											<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+											<h3 class="text-uppercase peso-200 text-white shadow_sp">SAN PEDRO NEOCLÁSICO</h3>
 											<div class="logo_colecction"></div>
 										</span>
 									</div>
@@ -191,7 +191,7 @@
 									<div class="thumbnail-overlay">
 										<img class="img-fluid" src="img/init/portafolio/UKU1.jpg" alt="">
 										<span class="thumbnail-title">
-											<h3 class="text-uppercase peso-200 text-white shadow_sp">JASMÍN</h3>
+											<h3 class="text-uppercase peso-200 text-white shadow_sp">UKUKUS</h3>
 											<div class="logo_colecction"></div>
 										</span>
 									</div>
