--- a/sanpedro.html
+++ b/sanpedro.html
@@ -89,9 +89,9 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h3 class="mt-5 mb-2">
-						JASMÍN
+						SAN PEDRO NEOCLÁSICO
 					</h3>
-					<p class="text-uppercase mb-4">Colección inspirada en culturas orientales, tomando principalmente la cultura china.</p>
+					<p class="text-uppercase mb-4">Colección inspirada en la Emblemática iglesia de San Pedro de Lima.</p>
 				</div>
 			</div>
 		</div>
@@ -102,76 +102,70 @@
 			<div id="gift-carousel" class="owl-carousel owl-theme">
 
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA1-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA1-min.jpg" alt="">						
+					<a href="./img/coleccion/SAN PEDRO/SP1-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/SAN PEDRO/SP1-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA2-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA2-min.jpg" alt="">						
+					<a href="./img/coleccion/SAN PEDRO/SP2-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/SAN PEDRO/SP2-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA3-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA3-min.jpg" alt="">						
+					<a href="./img/coleccion/SAN PEDRO/SP3-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/SAN PEDRO/SP3-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA4-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA4-min.jpg" alt="">						
+					<a href="./img/coleccion/SAN PEDRO/SP4-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/SAN PEDRO/SP4-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA5-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA5-min.jpg" alt="">						
+					<a href="./img/coleccion/SAN PEDRO/SP5-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/SAN PEDRO/SP5-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA6-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA6-min.jpg" alt="">						
+					<a href="./img/coleccion/SAN PEDRO/SP6-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/SAN PEDRO/SP6-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA7-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA7-min.jpg" alt="">						
+					<a href="./img/coleccion/SAN PEDRO/SP7-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/SAN PEDRO/SP7-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA8-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA8-min.jpg" alt="">						
+					<a href="./img/coleccion/SAN PEDRO/SP8-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/SAN PEDRO/SP8-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA9-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA9-min.jpg" alt="">						
+					<a href="./img/coleccion/SAN PEDRO/SP9-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/SAN PEDRO/SP9-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA10-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA10-min.jpg" alt="">						
+					<a href="./img/coleccion/SAN PEDRO/SP10-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/SAN PEDRO/SP10-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA11-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA11-min.jpg" alt="">						
+					<a href="./img/coleccion/SAN PEDRO/SP11-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/SAN PEDRO/SP11-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA12-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA12-min.jpg" alt="">						
+					<a href="./img/coleccion/SAN PEDRO/SP12-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/SAN PEDRO/SP12-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA13-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA13-min.jpg" alt="">						
+					<a href="./img/coleccion/SAN PEDRO/SP13-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/SAN PEDRO/SP13-min.jpg" alt="">						
 					</a>
 				</div>
-				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA14-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA14-min.jpg" alt="">						
-					</a>
-				</div>
-				
 				
 
 			</div>
