--- a/aflordepiel.html
+++ b/aflordepiel.html
@@ -89,9 +89,9 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h3 class="mt-5 mb-2">
-						JASMÍN
+						A FLOR DE PIEL
 					</h3>
-					<p class="text-uppercase mb-4">Colección inspirada en culturas orientales, tomando principalmente la cultura china.</p>
+					<p class="text-uppercase mb-4">Colección inspirada en el contacto de la fibra de Alpaca con nuestra Piel.</p>
 				</div>
 			</div>
 		</div>
@@ -102,76 +102,82 @@
 			<div id="gift-carousel" class="owl-carousel owl-theme">
 
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA1-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA1-min.jpg" alt="">						
+					<a href="./img/coleccion/A FLOR DE PIEL/FP1-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP1-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA2-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA2-min.jpg" alt="">						
+					<a href="./img/coleccion/A FLOR DE PIEL/FP2-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP2-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA3-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA3-min.jpg" alt="">						
+					<a href="./img/coleccion/A FLOR DE PIEL/FP3-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP3-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA4-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA4-min.jpg" alt="">						
+					<a href="./img/coleccion/A FLOR DE PIEL/FP4-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP4-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA5-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA5-min.jpg" alt="">						
+					<a href="./img/coleccion/A FLOR DE PIEL/FP5-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP5-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA6-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA6-min.jpg" alt="">						
+					<a href="./img/coleccion/A FLOR DE PIEL/FP6-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP6-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA7-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA7-min.jpg" alt="">						
+					<a href="./img/coleccion/A FLOR DE PIEL/FP7-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP7-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA8-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA8-min.jpg" alt="">						
+					<a href="./img/coleccion/A FLOR DE PIEL/FP8-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP8-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA9-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA9-min.jpg" alt="">						
-					</a>
-				</div>
-				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA10-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA10-min.jpg" alt="">						
-					</a>
-				</div>
-				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA11-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA11-min.jpg" alt="">						
-					</a>
-				</div>
-				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA12-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA12-min.jpg" alt="">						
-					</a>
-				</div>
-				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA13-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA13-min.jpg" alt="">						
-					</a>
-				</div>
-				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA14-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA14-min.jpg" alt="">						
+					<a href="./img/coleccion/A FLOR DE PIEL/FP9-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP9-min.jpg" alt="">						
 					</a>
 				</div>
 				
+				<div class="item grid-item popup-gallery">
+					<a href="./img/coleccion/A FLOR DE PIEL/FP11-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP11-min.jpg" alt="">						
+					</a>
+				</div>
+				<div class="item grid-item popup-gallery">
+					<a href="./img/coleccion/A FLOR DE PIEL/FP12-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP12-min.jpg" alt="">						
+					</a>
+				</div>
+				<div class="item grid-item popup-gallery">
+					<a href="./img/coleccion/A FLOR DE PIEL/FP13-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP13-min.jpg" alt="">						
+					</a>
+				</div>
+				<div class="item grid-item popup-gallery">
+					<a href="./img/coleccion/A FLOR DE PIEL/FP14-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP14-min.jpg" alt="">						
+					</a>
+				</div>
+				<div class="item grid-item popup-gallery">
+					<a href="./img/coleccion/A FLOR DE PIEL/FP15-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP15-min.jpg" alt="">						
+					</a>
+				</div>
+			
+				<div class="item grid-item popup-gallery">
+					<a href="./img/coleccion/A FLOR DE PIEL/FP18-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP18-min.jpg" alt="">						
+					</a>
+				</div>
 				
 
 			</div>
