--- a/magma.html
+++ b/magma.html
@@ -89,9 +89,9 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h3 class="mt-5 mb-2">
-						JASMÍN
+						MAGMA
 					</h3>
-					<p class="text-uppercase mb-4">Colección inspirada en culturas orientales, tomando principalmente la cultura china.</p>
+					<p class="text-uppercase mb-4">Colección inspirada en el Majestuoso volcán Misti.</p>
 				</div>
 			</div>
 		</div>
@@ -102,76 +102,70 @@
 			<div id="gift-carousel" class="owl-carousel owl-theme">
 
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA1-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA1-min.jpg" alt="">						
+					<a href="./img/coleccion/MAGMA/MG1-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/MAGMA/MG1-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA2-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA2-min.jpg" alt="">						
+					<a href="./img/coleccion/MAGMA/MG2-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/MAGMA/MG2-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA3-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA3-min.jpg" alt="">						
+					<a href="./img/coleccion/MAGMA/MG3-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/MAGMA/MG3-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA4-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA4-min.jpg" alt="">						
+					<a href="./img/coleccion/MAGMA/MG4-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/MAGMA/MG4-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA5-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA5-min.jpg" alt="">						
+					<a href="./img/coleccion/MAGMA/MG5-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/MAGMA/MG5-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA6-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA6-min.jpg" alt="">						
+					<a href="./img/coleccion/MAGMA/MG6-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/MAGMA/MG6-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA7-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA7-min.jpg" alt="">						
+					<a href="./img/coleccion/MAGMA/MG7-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/MAGMA/MG7-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA8-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA8-min.jpg" alt="">						
+					<a href="./img/coleccion/MAGMA/MG8-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/MAGMA/MG8-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA9-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA9-min.jpg" alt="">						
+					<a href="./img/coleccion/MAGMA/MG9-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/MAGMA/MG9-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA10-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA10-min.jpg" alt="">						
+					<a href="./img/coleccion/MAGMA/MG10-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/MAGMA/MG10-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA11-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA11-min.jpg" alt="">						
+					<a href="./img/coleccion/MAGMA/MG11-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/MAGMA/MG11-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA12-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA12-min.jpg" alt="">						
+					<a href="./img/coleccion/MAGMA/MG12-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/MAGMA/MG12-min.jpg" alt="">						
 					</a>
 				</div>
 				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA13-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA13-min.jpg" alt="">						
+					<a href="./img/coleccion/MAGMA/MG13-min.jpg">
+						<img class="img-fluid" src="./img/coleccion/MAGMA/MG13-min.jpg" alt="">						
 					</a>
 				</div>
-				<div class="item grid-item popup-gallery">
-					<a href="./img/coleccion/JASMIN/JA14-min.jpg">
-						<img class="img-fluid" src="./img/coleccion/JASMIN/JA14-min.jpg" alt="">						
-					</a>
-				</div>
-				
 				
 
 			</div>
