actualizado para mac

--- a/colecciones.html
+++ b/colecciones.html
@@ -26,7 +26,7 @@
 		<link rel="stylesheet" href="vendor/magnific-popup/css/magnific-popup.css">
 		<link rel="stylesheet" href="vendor/vegas/dist/vegas.min.css">
 		<link rel="stylesheet" href="vendor/aos/dist/aos.css">
-		
+		<script src="./js/prefixfree.min.js"></script>
 
 		<!-- Fonts CSS -->
 		<link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
