--- a/contacto.html
+++ b/contacto.html
@@ -38,6 +38,7 @@
 	<!-- Theme CSS -->
 	<link rel="stylesheet" href="css/style.css">
 	<script src="https://smtpjs.com/v3/smtp.js"></script>
+	<script src="./js/prefixfree.min.js"></script>
 
 </head>
 
