--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 	<!-- Theme CSS -->
 	<link rel="stylesheet" href="css/style.css">
+	<script src="./js/prefixfree.min.js"></script>
 
 </head>
 
