--- a/magma.html
+++ b/magma.html
@@ -37,6 +37,7 @@
 
 	<!-- Theme CSS -->
 	<link rel="stylesheet" href="css/style.css">
+	<script src="./js/prefixfree.min.js"></script>
 
 </head>
 
