--- a/aflordepiel.html
+++ b/aflordepiel.html
@@ -117,11 +117,11 @@
 						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP3-min.jpg" alt="">						
 					</a>
 				</div>
-				<div class="item grid-item popup-gallery">
+				<!-- <div class="item grid-item popup-gallery">
 					<a href="./img/coleccion/A FLOR DE PIEL/FP4-min.jpg">
 						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP4-min.jpg" alt="">						
 					</a>
-				</div>
+				</div> -->
 				<div class="item grid-item popup-gallery">
 					<a href="./img/coleccion/A FLOR DE PIEL/FP5-min.jpg">
 						<img class="img-fluid" src="./img/coleccion/A FLOR DE PIEL/FP5-min.jpg" alt="">						
